--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,31 @@ on:
     tags: ["v*"]
 
 jobs:
+  publish:
+    name: crates.io
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+        name: Checkout
+
+      - uses: actions/cache@v3
+        name: Configure cache
+        with:
+          path: |
+            ~/.cargo/
+            ./build/
+          key: publish-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: publish-cargo-
+
+      - run: cargo test
+        name: Test
+
+      - run: cargo publish
+        name: Publish
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+
   release:
     strategy:
       fail-fast: false
@@ -37,6 +62,7 @@ jobs:
 
     name: ${{ matrix.release.target }}
     runs-on: ${{ matrix.release.os }}
+    needs: publish
 
     steps:
       - uses: actions/checkout@v3
@@ -73,7 +99,6 @@ jobs:
 
       - uses: softprops/action-gh-release@v1
         name: Publish
-        # prerelease: true
         with:
           files: ./build/${{ matrix.release.target }}/release/wasmc-${{ github.ref_name }}-${{ matrix.release.target }}.*
 
