--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,19 @@ jobs:
       - uses: actions/checkout@v3
         name: Checkout
 
+      - uses: aslilac/setup@v1
+        with:
+          archives: |
+            https://mckayla.cloud/tomlq-linux-x64.tar.gz
+
+      - run: |
+          if [ "v$(tomlq version -f Cargo.toml)" == "${{ github.ref_name }}" ]; then
+            exit 0
+          fi
+
+          echo "tag does not match version in Cargo.toml, refusing to publish"
+          exit 1
+
       - uses: actions/cache@v3
         name: Configure cache
         with:
